--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,24 @@
             </intent-filter>
         </activity>
         <activity
+            android:name="com.uce.jessita.sistema_ventas.Administrador"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.uce.jessita.sistema_ventas.Presentacion"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name="com.uce.jessita.sistema_ventas.Reservaciones1"
             android:label="@string/app_name" >
             <intent-filter>
